--- a/allMN2/htmls/index.html
+++ b/allMN2/htmls/index.html
@@ -22,7 +22,7 @@ th, td {
   <th rowspan=5>Transitioning gene sets<br><a href="../ordered_clusterset_means.svg"><img src="../ordered_clusterset_means.svg" width="350" height="1100"></a></th>
 </tr>
 <tr>
-  <th>Subclusters<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png.svg" width="300"></a></th>
+  <th>Subclusters<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
   <th>Relationship tree<br><img src="../images/allMN2_tree.png" width="300"></th>
 </tr>
 <tr>
