--- a/allMN2/htmls/index.html
+++ b/allMN2/htmls/index.html
@@ -22,12 +22,12 @@ th, td {
   <th rowspan=5>Transitioning gene sets<br><a href="../ordered_clusterset_means.svg"><img src="../ordered_clusterset_means.svg" width="350" height="1100"></a></th>
 </tr>
 <tr>
-  <th>Subclusters<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
+  <th>Subclusters t-SNE<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
   <th>Relationship tree<br><img src="../images/allMN2_tree.png" width="300"></th>
 </tr>
 <tr>
-  <th>Samples distribution<br><a href="../images/samples_allMN2_legend.png"><img src="../images/samples_allMN2_legend.png" width="300"></a></th>
-  <th>HOX profiles distribution<br><a href="../images/HOXlouvain_allMN2_legend.png"><img src="../images/HOXlouvain_allMN2_legend.png" width="300"></a></th>
+  <th>Samples distribution t-SNE<br><a href="../images/samples_allMN2_legend.png"><img src="../images/samples_allMN2_legend.png" width="300"></a></th>
+  <th>HOX profiles distribution t-SNE<br><a href="../images/HOXlouvain_allMN2_legend.png"><img src="../images/HOXlouvain_allMN2_legend.png" width="300"></a></th>
 </tr>
 <tr>
   <th colspan=2>Composition of samples<br><a href="../images/sample_composition_1.svg"><img src="../images/sample_composition_1.svg" width="300"></a>
