--- a/allMN2/htmls/index.html
+++ b/allMN2/htmls/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 table, th, td {
-  border: 0px solid black;
+  border: 1px solid black;
   border-collapse: separate;
   border-spacing: 5px;
   font-family: Arial, Helvetica, sans-serif;
@@ -19,7 +19,7 @@ th, td {
 <table style="width:100%">
 <tr>
   <th colspan=2>Subset<br><a href="../images/xxx.svg"><img src="../images/xxx.svg" width="700"></a></th>
-  <th rowspan=5>Transitioning gene sets<br><a href="../ordered_clusterset_means.svg"><img src="../ordered_clusterset_means.svg" width="350" height="1100"></a></th>
+  <th rowspan=5>Transitioning gene sets<br><a href="../ordered_clusterset_means.svg"><img src="../ordered_clusterset_means.svg" width="350"></a></th>
 </tr>
 <tr>
   <th>Subclusters t-SNE<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
