--- a/allMN2/htmls/index.html
+++ b/allMN2/htmls/index.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html><html>
 <head>
 <style>
-table, th, td {
-  border: 1px solid black;
+table {
+  border: 0px solid black;
   border-collapse: separate;
   border-spacing: 5px;
   font-family: Arial, Helvetica, sans-serif;
 }
-th, td {
+tr, th {
+  border: 1px solid grey;
+  border-collapse: separate;
   padding: 5px;
+  text-align: center;
+  vertical-align: top;
+}
+tr.noBorder th {
+  border: 0px;
+  border-collapse: separate;
   text-align: left;
   vertical-align: top;
 }
 </style>
 </head>
 <body>
-<h2>All MN (Motor neurons)</h2>
+<h2>All MN (Motor Neurons)</h2>
 <table style="width:100%">
-<tr>
-  <th colspan=2>Subset<br><a href="../images/xxx.svg"><img src="../images/xxx.svg" width="700"></a></th>
-  <th rowspan=5>Transitioning gene sets<br><a href="../ordered_clusterset_means.svg"><img src="../ordered_clusterset_means.svg" width="350"></a></th>
+<tr class="noBorder">
+  <th colspan=3>[Subset]</th>
+  <th>[Transitioning Gene Sets]</th>
 </tr>
 <tr>
-  <th>Subclusters t-SNE<br><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
-  <th>Relationship tree<br><img src="../images/allMN2_tree.png" width="300"></th>
+  <th colspan=3><a href="../images/allMN2_subset.png"><img src="../images/allMN2_subset.png" height="300"></a></th>
+  <th rowspan=7><a href="../ordered_clusterset_means.svg"><img src="../images/ordered_clusterset_means_p.svg" width="350"></a></th>
+</tr>
+<tr class="noBorder">
+  <th><br>[Subclusters]<br>t-SNE</th>
+  <th><br><br>Relationship tree</th>
+  <th><br><br>Relationship annotation</th>
 </tr>
 <tr>
-  <th>Samples distribution t-SNE<br><a href="../images/samples_allMN2_legend.png"><img src="../images/samples_allMN2_legend.png" width="300"></a></th>
-  <th>HOX profiles distribution t-SNE<br><a href="../images/HOXlouvain_allMN2_legend.png"><img src="../images/HOXlouvain_allMN2_legend.png" width="300"></a></th>
+  <th><a href="../images/nmf_allMN2_legend.png"><img src="../images/nmf_allMN2_legend.png" width="300"></a></th>
+  <th><a href="../images/allMN2_tree_r.png"><img src="../images/allMN2_tree_r.png" height="300"></a></th>
+  <th><br><br><a href="../images/relationship_table.png"><img src="../images/relationship_table.png" height="200"></a></th>
+</tr>
+<tr class="noBorder">
+  <th><br>[Samples distribution]<br>t-SNE</th>
+  <th><br><br>Cluster's composition of samples</th>
+  <th><br><br>Samples's composition of clusters</th>
 </tr>
 <tr>
-  <th colspan=2>Composition of samples<br><a href="../images/sample_composition_1.svg"><img src="../images/sample_composition_1.svg" width="300"></a>
-     <a href="../images/sample_composition_2.svg"><img src="../images/sample_composition_2.svg" width="300"></a></th>
+  <th><a href="../images/samples_allMN2_legend.png"><img src="../images/samples_allMN2_legend.png" width="300"></a></th>
+  <th><a href="../images/sample_composition_1.svg"><img src="../images/sample_composition_1.svg" width="300"></a></th>
+  <th><a href="../images/sample_composition_2.svg"><img src="../images/sample_composition_2.svg" width="300"></a></th>  
+</tr>
+<tr class="noBorder">
+  <th><br>[HOX profile distribution]<br>t-SNE</th>
+  <th><br><br>Cluster's composition of HOX profiles</th>
+  <th><br><br>HOX profiles's composition of clusters</th>
 </tr>
 <tr>
-  <th colspan=2>Composition of HOX profiles<br><a href="../images/HOXlouvain_composition_1.svg"><img src="../images/HOXlouvain_composition_1.svg" width="300"></a>
-     <a href="../images/HOXlouvain_composition_2.svg"><img src="../images/HOXlouvain_composition_2.svg" width="300"></a></th>
+  <th><a href="../images/HOXlouvain_allMN2_legend.png"><img src="../images/HOXlouvain_allMN2_legend.png" width="300"></a></th>
+  <th><a href="../images/HOXlouvain_composition_1.svg"><img src="../images/HOXlouvain_composition_1.svg" width="300"></a></th>
+  <th><a href="../images/HOXlouvain_composition_2.svg"><img src="../images/HOXlouvain_composition_2.svg" width="300"></a></th>  
 </tr>
 </table>
 </body></html>
