--- a/SCsensory/htmls/index.html
+++ b/SCsensory/htmls/index.html
@@ -41,7 +41,7 @@ tr.noBorder th {
 <tr>
   <th><a href="../images/nmf_SCsensory_legend.png"><img src="../images/nmf_SCsensory_legend.png" width="300"></a></th>
   <th><a href="../images/SCsensory_tree_r.png"><img src="../images/SCsensory_tree_r.png" height="300"></a></th>
-  <th><br><br><a href="../images/SCsensory_relationship_table.png"><img src="../images/SCsensory_relationship_table.png" height="200"></a></th>
+  <th><br><br><a href="../images/SCsensory_relationship_table.png"><img src="../images/SCsensory_relationship_table.png" width="300"></a></th>
 </tr>
 <tr class="noBorder">
   <th><br>[Samples distribution]<br>t-SNE</th>
